Updated Lab 3 footer

--- a/Lab 3/travel.html
+++ b/Lab 3/travel.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <table>
+      <caption>
+        Lab 3
+      </caption>
       <thead>
         <tr>
           <th colspan="6">Dream Destination Planning</th>
@@ -101,8 +104,6 @@
             business, culture, and arts hub.
           </td>
         </tr>
-      </tbody>
-      <tfoot>
         <tr>
           <td><img src="images/6 dubai..jpg" alt="" /></td>
           <th class="name">Dubai, United Arab Emirates</th>
@@ -120,6 +121,13 @@
             structures. Shopping and entertainment, and rapid transformation
             from fishing village to cosmopolitan marvel.
           </td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="4">Estimated Cost of Travel:</td>
+          <td>Unknown</td>
+          <td>Notes</td>
         </tr>
       </tfoot>
     </table>
